[package]
name = "Stock_Trading_System"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
bincode = "1.3.3"
bma-benchmark = "0.0.24"
crossbeam-channel = "0.5.12"
get_user_input = "0.1.1"
rand = "0.8.5"
scheduled-thread-pool = "0.2.7"
serde = "1.0.197"
serde_json = "1.0.115"
